Modified code for Lwc project file boatTile,boatNearMe etc...

--- a/force-app/main/default/classes/AkramOppProduct.cls
+++ b/force-app/main/default/classes/AkramOppProduct.cls
@@ -11,8 +11,10 @@ public with sharing class AkramOppProduct {
         String Query = 'select Id, Name, Description__c, Opportunity__c, Price__c, Quantity__c from Opp_Product__c where Id = :productId';
         return Database.query(Query);
     }
-//     @AuraEnabled
-//     public static string createProduct(){
-        
-//     }
+
+    @AuraEnabled(cacheable=true)
+    public static List<Opportunity> getAccountList(){
+        String queryString = 'SELECT AccountId, SUM(AMOUNT) total FROM Opportunity GROUP BY AccountId ORDER BY SUM(Amount) DESC NULLS LAST Limit 10';
+        return Database.query(queryString);
+    }
 }
